add room & relation to game
